--- a/templates/basic/.vscode/settings.json
+++ b/templates/basic/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "workbench.colorTheme": "Abyss"
+  "workbench.colorTheme": "Abyss",
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/*.code-search": true,
+    "**/*.wcto.js": true
+  }
 }
