--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -10,7 +10,7 @@
     "sass:dev": "sass --watch sass/main.scss:dist/css/main.css --style expanded --source-map --load-path='./src/'"
   },
   "devDependencies": {
-    "winnetoujs": "^3.0.0-beta.45",
+    "winnetoujs": "^3.0.1",
     "sass": "^1.89.2"
   },
   "keywords": [],
