--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
-    "publish": "npm publish",
+    "publish:latest": "npm publish",
     "publish:beta": "npm publish --tag beta"
   },
   "name": "create-winnetoujs-app",
