--- a/templates/basic/jsconfig.json
+++ b/templates/basic/jsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
     "module": "nodenext",
+    "moduleResolution": "nodenext",
     "target": "es2022",
     "checkJs": true,
+    "allowJs": true,
     "resolveJsonModule": true,
     "paths": {
       "@libs/*": ["./libs/*"],
