--- a/templates/node-ssr-ts/Frontend/win.config.json
+++ b/templates/node-ssr-ts/Frontend/win.config.json
@@ -1,5 +1,5 @@
 {
-  "apps": ["./src/arkon.ts"],
+  "apps": ["./src/app.ts"],
   "outputDir": "../Public/js",
   "constructosSourceFolder": "./src"
 }
